# stereo-event-reconstruction-tool

./: .gitignore  .gitmodules  CMakeLists.txt  E2VID_changes.md  README.md
docker/: Dockerfile  entrypoint.sh  esvo_eigen_fix.patch  esvo_linker_fix.patch
scripts/: check_env.sh  docker_build.sh  install_e2vid_env.sh  install_python_env.sh  run_esvo.sh  run_kalibr.sh
src/cpp/: Calibrator.cpp  Calibrator.h  FrameGenerator.cpp  FrameGenerator.h  Log.h  Main.cpp  Main.cpp.bak  Recorder.cpp  Recorder.h
src/python/: stereo_events_to_rosbag.py  stereo_frames_to_rosbag.py
